updated daily struct with date and counter
