# own_code/db_handler.go
@@ -4,8 +4,8 @@ import (
 	"SzerfoldAPI/models"
 	"database/sql"
 	"fmt"
-
 	_ "github.com/lib/pq"
+	"time"
 )
 import "strconv"
 
@@ -31,13 +31,14 @@ func dbConnect() *sql.DB {
 
 func AddNewDaily(newDaily models.Daily) models.Daily {
 	addedDaily := models.Daily{}
+	newDaily.Date = getDate()
 	db := dbConnect()
 	defer db.Close()
 	SqlStatement := `
-			INSERT INTO dailies (message, verse, pray, title)
-			VALUES ($1, $2, $3, $4)
+			INSERT INTO dailies (message, verse, pray, title, date)
+			VALUES ($1, $2, $3, $4, $5)
 			RETURNING id, message, verse, pray, title`
-	err := db.QueryRow(SqlStatement, newDaily.Message, newDaily.Verse, newDaily.Pray, newDaily.Title).Scan(&addedDaily.ID, &addedDaily.Message, &addedDaily.Verse, &addedDaily.Pray, &addedDaily.Title)
+	err := db.QueryRow(SqlStatement, newDaily.Message, newDaily.Verse, newDaily.Pray, newDaily.Title, newDaily.Date).Scan(&addedDaily.ID, &addedDaily.Message, &addedDaily.Verse, &addedDaily.Pray, &addedDaily.Title)
 	if err != nil {
 		panic(err)
 	}
@@ -47,7 +48,7 @@ func AddNewDaily(newDaily models.Daily) models.Daily {
 func GetLatestDailies(since *int64) (dailies []*models.Daily) {
 	db := dbConnect()
 	defer db.Close()
-	rows, err := db.Query("SELECT id, message, pray, title, verse FROM dailies WHERE id > $1 ORDER BY id DESC LIMIT 20", since)
+	rows, err := db.Query("SELECT id, message, pray, title, verse, counter, date FROM dailies WHERE id > $1 ORDER BY id DESC LIMIT 20", since)
 	if err != nil {
 		// handle this error better than this
 		panic(err)
@@ -55,12 +56,14 @@ func GetLatestDailies(since *int64) (dailies []*models.Daily) {
 	defer rows.Close()
 	for rows.Next() {
 		daily := models.Daily{}
-		err = rows.Scan(&daily.ID, &daily.Message, &daily.Pray, &daily.Title, &daily.Verse)
+		err = rows.Scan(&daily.ID, &daily.Message, &daily.Pray, &daily.Title, &daily.Verse, &daily.Counter, &daily.Date)
 		if err != nil {
 			// handle this error
 			panic(err)
 		}
 		dailies = append(dailies, &daily)
+		go updateCounter(daily.ID)
+		daily.Counter++
 	}
 	// get any error encountered during iteration
 	err = rows.Err()
@@ -88,11 +91,19 @@ func UpdateDaily(dailyToUpdate models.Daily, id int64) models.Daily {
 func GetDailyByID(id int64) (resultDaily models.Daily) {
 	db := dbConnect()
 	defer db.Close()
-	sqlStatement := `SELECT id, message, pray, title, verse FROM dailies WHERE id = $1;`
+	sqlStatement := `SELECT id, message, pray, title, verse, counter, date FROM dailies WHERE id = $1;`
 	row := db.QueryRow(sqlStatement, id)
-	err := row.Scan(&resultDaily.ID, &resultDaily.Message, &resultDaily.Pray, &resultDaily.Title, &resultDaily.Verse)
-	if err != nil {
+	err := row.Scan(&resultDaily.ID, &resultDaily.Message, &resultDaily.Pray, &resultDaily.Title, &resultDaily.Verse, &resultDaily.Counter, &resultDaily.Date)
+	switch err {
+	case sql.ErrNoRows:
+		return GetDailyByID(id - 1)
+	case nil:
+		go updateCounter(id)
+		resultDaily.Counter++
+		return
+	default:
 		panic(err)
+
 	}
 	return
 }
@@ -107,4 +118,22 @@ func DeleteDailyByID(id int64) {
 	if err != nil {
 		panic(err)
 	}
+}
+
+func updateCounter(id int64) {
+	db := dbConnect()
+	defer db.Close()
+	queryString := `UPDATE dailies 
+   			SET counter = counter + 1
+			WHERE id = $1;`
+	_, err := db.Exec(queryString, id)
+	if err != nil {
+		panic(err)
+	}
+}
+
+func getDate() (date string) {
+	dateSting := time.Now().Format(time.RFC3339)
+	date = dateSting[:10]
+	return
 }
